--- a/.pypirc
+++ b/.pypirc
@@ -3,6 +3,6 @@
         pypi
 
     [pypi]
-    repository: https://pypi.python.org/pypi
+    repository: https://upload.pypi.org/legacy/
     username: {{your_username}}
     password: {{your_password}}
