--- a/.pypirc
+++ b/.pypirc
@@ -1,8 +1,14 @@
 [distutils]
     index-servers =
         pypi
+        testpypi
 
     [pypi]
     repository: https://upload.pypi.org/legacy/
     username: {{your_username}}
     password: {{your_password}}
+
+    [pypitest]
+    repository:https://testpypi.python.org/pypi
+    username:{{your_username}}
+    password:{{your_password}}
