--- a/.pypirc
+++ b/.pypirc
@@ -4,11 +4,8 @@
         testpypi
 
     [pypi]
-    repository: https://upload.pypi.org/legacy/
-    username: {{your_username}}
+    repository: https://upload.pypi.org/
+    username: 4coders
     password: {{your_password}}
-
-    [pypitest]
-    repository:https://testpypi.python.org/pypi
-    username:{{your_username}}
-    password:{{your_password}}
+    [testpypi]
+    username : 4coders
